Fixed mime type bug on Firefox

--- a/src/css/settings-export.css
+++ b/src/css/settings-export.css
@@ -24,6 +24,7 @@
 }
 
 .png-export-preview img {
+  max-height:32px;
   float: left;
 }
 
